docs-kits_versioned_docs/version-24.08/kits/puris-kit/changelog.md
---
id: changelog
title: Changelog
description: PURIS KIT
sidebar_position: 1
---

### PURIS KIT

All notable changes to this Kit will be documented in this file.

## [0.3.0] - 2024-08-01

### Added

- Development View
  - Added page logo on the top
  - Added "Sample Data > 5. Days of Supply v2.0.0" chapter
  - Added section "Component Architecture (Conceptual Whitebox View)" with figure 2: Whitebox View on a PURIS System.

- Operation View
  - Added initial Operation View
  - Moved reference implementation from the Development View to Operation View

### Changed

- Development View
  - Updated architecture chapter: added link to the umbrella helm chart
  - Updated figure 1: replaced Keycloak with SIP, CIP and BPN-DID
  - Updated figure 3 (previously 2): extended with Days of Supply model
  - Updated policies chapter: removed membership policy example, moved framework agreement example into the JSON example in the usage policies, add PURIS purpose explanation.
  - Updated reference implementation chapter: extended the PURIS FOSS description to include all other PURIS models

## [0.2.0] - 2024-05-29

### Added​

- documentation of the adoption view
- documentation of the software development view

### Changed​

- ./.

### Removed​

- ./.

## [0.1.0] - 2023-11-29

### Added

- Initial version of the Kit including the adoption view

### Changed

- ./.

### Removed

- ./.

## NOTICE

This work is licensed under the CC-BY-4.0

- SPDX-License-Identifier: CC-BY-4.0
- SPDX-FileCopyrightText: 2024 Fraunhofer-Gesellschaft zur Foerderung der angewandten Forschung e.V. (represented by Fraunhofer ISST)
- SPDX-FileCopyrightText: 2024 TRUMPF Werkzeugmaschinen SE + Co. KG
- SPDX-FileCopyrightText: 2024 ISTOS GmbH (a member of the DMG Mori Group)
- SPDX-FileCopyrightText: 2024 Volkswagen AG
- SPDX-FileCopyrightText: 2024 Contributors to the Eclipse Foundation
- Source URL: [https://github.com/eclipse-tractusx/eclipse-tractusx.github.io/docs-kits_versioned_docs/version-24.08/kits/puris-kit/changelog.md](https://github.com/eclipse-tractusx/eclipse-tractusx.github.io/docs-kits_versioned_docs/version-24.08/kits/puris-kit/changelog.md)
