docs-kits_versioned_docs/version-25.09/kits/puris-kit/changelog.md
---
id: changelog
title: Changelog
description: PURIS KIT
sidebar_position: 1
---
![puris kit banner](@site/static/img/kits/puris/puris-kit-logo.svg)

### PURIS KIT

All notable changes to this KIT will be documented in this file.

## [0.4.0] - 2025-08-16

### Added

- Adoption View
  - Business Value Framework: Introduced a structured method for evaluating the business value of PURIS by analyzing supply chain conditions, usage scenarios (Monitoring vs. Bottleneck Management), and potential cost savings.
  - Detailed Integration Scenarios: Included a new section with diagrams and explanations for various operational setups, including Single/Multi-Customer and Single/Multi-Sourcing scenarios.
  - PURIS & DCM Synergy Explanation: Added a dedicated section to clarify how PURIS (short-term, daily, material-level data) and Demand and Capacity Management (DCM) (long-term, weekly, capacity-level data) complement each other for end-to-end supply chain transparency.
  - Early Industry Feedback: Incorporated qualitative results and charts from a study with 10 companies, providing practical insights and validation for the PURIS framework.
  - Trustful Collaboration Section: Emphasized trustful data sharing as a central element for the success of PURIS, supported by a new graphic.
- Getting Started
  - Added a comprehensive, step-by-step guide for onboarding, detailing both the technical (standards, connector, DTR) and business (use case definition, BPN) aspects of implementation.

## [0.3.1] - 2024-08-08

### Changed

- Adoption View
  - Made "Customer" white font in overview graphic
  - Corrected confusion of Data Consumer and Data Provider in section "Actors and Roles"

## [0.3.0] - 2024-08-01

### Added

- Development View
  - Added page logo on the top
  - Added "Sample Data > 5. Days of Supply v2.0.0" chapter
  - Added section "Component Architecture (Conceptual Whitebox View)" with figure 2: Whitebox View on a PURIS System.
- Operation View
  - Added initial Operation View
  - Moved reference implementation from the Development View to Operation View

### Changed

- Development View
  - Updated architecture chapter: added link to the umbrella helm chart
  - Updated figure 1: replaced Keycloak with SIP, CIP and BPN-DID
  - Updated figure 3 (previously 2): extended with Days of Supply model
  - Updated policies chapter: removed membership policy example, moved framework agreement example into the JSON example in the usage policies, add PURIS purpose explanation.
  - Updated reference implementation chapter: extended the PURIS FOSS description to include all other PURIS models

## [0.2.0] - 2024-05-29

### Added​

- documentation of the adoption view
- documentation of the software development view

### Changed​

- ./.

### Removed​

- ./.

## [0.1.0] - 2023-11-29

### Added

- Initial version of the KIT including the adoption view

### Changed

- ./.

### Removed

- ./.

## NOTICE

This work is licensed under the CC-BY-4.0

- SPDX-License-Identifier: CC-BY-4.0
- SPDX-FileCopyrightText: 2024 Fraunhofer-Gesellschaft zur Foerderung der angewandten Forschung e.V. (represented by Fraunhofer ISST)
- SPDX-FileCopyrightText: 2024 TRUMPF Werkzeugmaschinen SE + Co. KG
- SPDX-FileCopyrightText: 2024 ISTOS GmbH (a member of the DMG Mori Group)
- SPDX-FileCopyrightText: 2024 Volkswagen AG
- SPDX-FileCopyrightText: 2024 Contributors to the Eclipse Foundation
- SPDX-FileCopyrightText: 2025 WITTE Automotive GmbH  
- SPDX-FileCopyrightText: 2025 Ford Werke GmbH  
- SPDX-FileCopyrightText: 2025 Robert Bosch Manufacturing Solutions GmbH  
- SPDX-FileCopyrightText: 2025 IBM Deutschland GmbH
- Source URL: [https://github.com/eclipse-tractusx/eclipse-tractusx.github.io/docs-kits_versioned_docs/version-25.09/kits/puris-kit/changelog.md](https://github.com/eclipse-tractusx/eclipse-tractusx.github.io/docs-kits_versioned_docs/version-25.09/kits/puris-kit/changelog.md)
